# tarminal-tar-install

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PACKAGING.md  README.md
.command/: LAUNCHPAD.md  PY.MD  RELEASE.md  TAG.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
alpine/: APKBUILD.template
archlinux/: PKGBUILD.template
crates/tar-install/: Cargo.toml
crates/tar-install/src/: archive.rs  desktop.rs  ffi.rs  filename.rs  install.rs  lib.rs  paths.rs  recipe.rs  state.rs  version.rs
crates/tarminal/: Cargo.toml
crates/tarminal/src/: main.rs
debian/: cargo-config  changelog  control  copyright  files  rules  tar-install.install  tarminal.install
docs/: heuristics.md  python.md  rust.md
examples/: myapp.tarapp.yml
flatpak/: me.tamkungz.Tarminal.desktop  me.tamkungz.Tarminal.metainfo.xml  me.tamkungz.Tarminal.yml
obs/: .gitignore  README.md  _service  make-sources.sh  push.sh  tarminal.changes  tarminal.spec
snap/: snapcraft.yaml
