[workspace]
members = [
  "crates/tar-install",
  "crates/tarminal",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/TamKungZ/tarminal-tar-install"

[workspace.dependencies]
anyhow = "1"
bzip2 = "0.4"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
flate2 = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
walkdir = "2"
xz2 = "0.1"
