[package]
name = "tar-install"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library core for safely installing Linux app tarballs into desktop-friendly locations."
homepage = "https://packages.tamkungz.me/apps/tarminal/"
readme = "../../README.md"

[package.metadata.deb]
section = "utils"
priority = "optional"
maintainer = "TamKungZ_ <kitthiwat.phimpromma@proton.me>"
depends = "libc6 (>= 2.34), liblzma5 (>= 5.1.1alpha+20120614), tar-install (>= 0.1.0), $auto"
extended-description = """
Core package for Tarminal.
This package provides the tar-install command stub and shared project identity.
"""

[package.metadata.generate-rpm]
summary = "Core library package for Tarminal"
assets = [
  { source = "../../target/release/tar-install", dest = "/usr/bin/tar-install", mode = "755" },
]

[lib]
name = "tar_install"
path = "src/lib.rs"

# Tiny helper binary for users who try to run `tar-install` directly.
# Real CLI frontend lives in the `tarminal` package.
[[bin]]
name = "tar-install"
path = "src/bin/tar-install.rs"

[dependencies]
anyhow.workspace = true
bzip2.workspace = true
flate2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
walkdir.workspace = true
xz2.workspace = true
hex = "0.4"
