[package]
name = "tarminal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI frontend for tar-install. Installs Linux app tarballs with commands, icons, and desktop entries."

[[bin]]
name = "tarminal"
path = "src/main.rs"

[dependencies]
tar-install = { path = "../tar-install" }
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
serde_json.workspace = true
