[package]
name = "tarminal"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI frontend for tar-install. Installs Linux app tarballs with commands, icons, and desktop entries."
homepage = "https://packages.tamkungz.me/apps/tarminal/"
readme = "../../README.md"

[package.metadata.deb]
section = "utils"
priority = "optional"
maintainer = "TamKungZ_ <kitthiwat.phimpromma@proton.me>"
depends = "tar-install (>= 0.1.0), libc6 (>= 2.34), liblzma5 (>= 5.1.1alpha+20120614), $auto"
extended-description = """
Tarminal installs Linux .tar, .tar.gz, and .tar.xz application archives into a proper desktop-app layout with commands, icons, desktop entries, and uninstall tracking.
"""

[package.metadata.generate-rpm]
summary = "CLI frontend for tar-install"
assets = [
  { source = "../../target/release/tarminal", dest = "/usr/bin/tarminal", mode = "755" },
]

[package.metadata.generate-rpm.requires]
tar-install = ">= 0.1.0"
libc6 = ">= 2.34"
liblzma5 = ">= 5.1.1alpha+20120614"

[[bin]]
name = "tarminal"
path = "src/main.rs"

[dependencies]
tar-install = { path = "../tar-install" }
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
serde_json.workspace = true
indicatif = "0.17"
libc = "0.2"
